// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SimpleDropdown should display items and allow selecting after toggle is clicked: expanded 1`] = `
<DocumentFragment>
  <button
    aria-expanded="true"
    aria-label="t([
  "simple-dropdown.aria-label"
])"
    class="pf-v6-c-menu-toggle pf-m-expanded"
    data-ouia-component-id="OUIA-Generated-MenuToggle-_r_l_"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      Lorem ipsum
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`SimpleDropdown should display items and allow selecting after toggle is clicked: select 1`] = `
[
  [
    "dolor",
  ],
]
`;

exports[`SimpleDropdown should have a dropdown label: label 1`] = `
<span
  class="pf-v6-c-menu-toggle__text"
>
  lorem ipsum
</span>
`;

exports[`SimpleDropdown should have a ouia id: button_ouiaid 1`] = `
<button
  aria-expanded="false"
  aria-label="t([
  "simple-dropdown.aria-label"
])"
  class="pf-v6-c-menu-toggle pf-m-disabled"
  data-ouia-component-id="lorem_ipsum"
  data-ouia-component-type="PF6/MenuToggle"
  data-ouia-safe="true"
  disabled=""
  type="button"
>
  <span
    class="pf-v6-c-menu-toggle__text"
  >
    lorem ipsum
  </span>
  <span
    class="pf-v6-c-menu-toggle__controls"
  >
    <span
      class="pf-v6-c-menu-toggle__toggle-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 20 20"
        width="1em"
      >
        <path
          d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
        />
      </svg>
    </span>
  </span>
</button>
`;

exports[`SimpleDropdown should have dropdown items with ouia id: expanded_ouiaid 1`] = `
<DocumentFragment>
  <button
    aria-expanded="true"
    aria-label="t([
  "simple-dropdown.aria-label"
])"
    class="pf-v6-c-menu-toggle pf-m-expanded"
    data-ouia-component-id="lorem_ipsum"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      lorem ipsum
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`SimpleDropdown should render a basic component: basic 1`] = `
<Dropdown
  isOpen={false}
  isScrollable={true}
  maxMenuHeight="300px"
  onOpenChange={[Function]}
  onSelect={[Function]}
  popperProps={
    {
      "enableFlip": true,
    }
  }
  toggle={[Function]}
>
  <DropdownList />
</Dropdown>
`;
